Fix contrast issue and turn off language switcher for now

--- a/src/components/docs/StylishHeader/StylishHeader.module.css
+++ b/src/components/docs/StylishHeader/StylishHeader.module.css
@@ -2,6 +2,7 @@
   display: inline-block;
   font-weight: bold;
   position: relative;
+  color: var(--sl-color-white);
 }
 
 .highlight::after {
